--- a/css/map.css
+++ b/css/map.css
@@ -1,4 +1,8 @@
-
+#map_svg_area{
+  width: 100%;
+  height:100%;
+  background-color: rgba(0,0,0,.05);
+}
 .boundary {
   fill: none;
   stroke: #000;
